--- a/app/templates/feed.html
+++ b/app/templates/feed.html
@@ -31,7 +31,7 @@
 
     <nav class="bg-[#9370DB] border-b-4 border-black sticky top-0 z-50 px-4 py-3 shadow-md">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold italic text-white drop-shadow-[2px_2px_0_#000]"></h1>
+            <h1 class="text-2xl font-bold italic text-white drop-shadow-[2px_2px_0_#000]">lnitial</h1>
             
             <div class="flex items-center gap-4">
                 <a href="{{ url_for('feed.my_profile') }}" class="flex items-center gap-3 bg-white px-3 py-1 rounded-full border-2 border-black hover:bg-gray-100 transition shadow-[4px_4px_0px_0px_rgba(0,0,0,1)] hover:translate-x-[2px] hover:translate-y-[2px] hover:shadow-none">
