--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,9 +10,9 @@
 <body class="flex items-center justify-center min-h-screen bg-slate-50">
 
     <div class="neo-card bg-ref-cyan p-8 w-full max-w-md m-4 relative overflow-hidden">
-        <div class="absolute top-0 right-0 bg-yellow-300 border-l-2 border-b-2 border-black px-3 py-1 font-bold text-xs">NEW!</div>
+        <div class="absolute top-0 right-0 bg-yellow-300 border-l-2 border-b-2 border-black px-3 py-1 font-bold text-xs">Halah</div>
         
-        <h1 class="text-4xl font-bold mb-2">Hai! 👋</h1>
+        <h1 class="text-4xl font-bold mb-2">Hayloww! 👋</h1>
         <p class="mb-6 font-medium">Masuk untuk melihat feed temanmu.</p>
 
         <form action="{{ url_for('auth.login') }}" method="POST">
