--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,7 +10,7 @@
 <body class="flex items-center justify-center min-h-screen bg-slate-50 py-10">
 
     <div class="neo-card bg-ref-green p-8 w-full max-w-md m-4 relative">
-        <h1 class="text-3xl font-bold mb-2">Join NeoSocial! 🚀</h1>
+        <h1 class="text-3xl font-bold mb-2">Join lnitial 🚀</h1>
         <p class="mb-6 font-medium text-sm">Buat akun baru dan temukan teman barumu.</p>
 
         <form action="{{ url_for('auth.register') }}" method="POST">
